fixed certi gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -590,7 +590,7 @@ img {
     display: flex;
     justify-content: space-around   ;
     flex-wrap: wrap;
-    /* column-gap: 4rem; */
+    column-gap: 4rem;
     row-gap: 2rem;
 }
 
